--- a/main.html
+++ b/main.html
@@ -29,8 +29,7 @@
         </div>
     </div>
     <div>
-
-        <div id="timer"></div>
+    <div id="timer">00:30</div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
