--- a/main.html
+++ b/main.html
@@ -21,9 +21,9 @@
             <div class="details">
                 <p class="hint">Hint: <span></span></p>
             </div>
-            <input type="text" spellcheck="false" placeholder="Enter a valid word">
+            <input type="text" spellcheck="false" placeholder="Enter the word">
             <div class="buttons">
-                <button class="refresh-word">Refresh Word</button>
+                <button class="new-word">New Word</button>
                 <button class="check-word">Check Word</button>
             </div>
         </div>
