Update #5 	modified:   main.html

--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
             <input type="text" spellcheck="false" placeholder="Enter the word">
             <div class="buttons">
                 <button class="new-word">New Word</button>
-                <button class="check-word">Check Word</button>
+                <button class="check-word">Verify Word</button>
             </div>
         </div>
     </div>
